Release Notes for Cppcheck 2.16

New checks:
-

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
-

Other:
-