@@ -42,27 +42,18 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 if(CMAKE_VERSION VERSION_EQUAL "3.12" OR CMAKE_VERSION VERSION_GREATER "3.12")
     find_package(Python COMPONENTS Interpreter)
-    if(NOT Python_Interpreter_FOUND)
-        message(WARNING "No python interpreter found - disabling matchcompiler.")
-        set(USE_MATCHCOMPILER_OPT "Off")
-    endif()
 else()
     find_package(PythonInterp 3 QUIET)
-    if(NOT PYTHONINTERP_FOUND)
-        set(PYTHONINTERP_FOUND "")
-        find_package(PythonInterp 2.7 QUIET)
-        if(NOT PYTHONINTERP_FOUND AND NOT USE_MATCHCOMPILER_OPT STREQUAL "Off")
-            message(WARNING "No python interpreter found - disabling matchcompiler.")
-            set(USE_MATCHCOMPILER_OPT "Off")
-        else()
-            message(WARNING "Support for Python 2.7 is deprecated (it went EOL in January 2020) and will be removed in Cppcheck 2.16 - please use Python 3.x instead.")
-        endif()
-    endif()
     if(PYTHONINTERP_FOUND)
         set(Python_EXECUTABLE ${PYTHON_EXECUTABLE})
         set(Python_VERSION ${PYTHON_VERSION_STRING})
         set(Python_Interpreter_FOUND ${PYTHONINTERP_FOUND})
     endif()
+endif()
+
+if(NOT Python_Interpreter_FOUND AND NOT USE_MATCHCOMPILER_OPT STREQUAL "Off")
+    message(WARNING "No python interpreter found - disabling matchcompiler.")
+    set(USE_MATCHCOMPILER_OPT "Off")
 endif()
 
 if(NOT USE_BUNDLED_TINYXML2)
