@@ -3,7 +3,7 @@ cppcheck-htmlreport
 This is a little utility to generate a html report of a XML file produced by
 cppcheck.
 
-The utility is implemented in Python (2.7+) and requires the pygments module
+The utility is implemented in Python and requires the pygments module
 to generate syntax highlighted source code.
 If you are using a Debian based Linux system, the pygments package can be 
 installed by following command:
